--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div>
       <h2>Productivity</h2>
       <p><a href="https://calendar.google.com">Google Calendar</a></p>
+      <p><a href="https://mail.google.com">Gmail</a></p>
+      <p><a href="https://ticktick.com">TickTick</a></p>
     </div>
   </body>
 </html>
