--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>Productivity</h2>
       <p><a href="https://calendar.google.com">Google Calendar</a></p>
       <p><a href="https://mail.google.com">Gmail</a></p>
-      <p><a href="https://ticktick.com">TickTick</a></p>
+      <p><a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a></p>
     </div>
   </body>
 </html>
