--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div>
       <h2>Productivity</h2>
       <p><a href="https://calendar.google.com">Google Calendar</a></p>
-      <p><a href="https://mail.google.com">Gmail</a></p>
       <p><a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a></p>
+      <p><a href="https://airtable.com">Airtable</a></p>
+      <p><a href="https://mail.google.com">Gmail</a></p>
     </div>
   </body>
 </html>
