--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       <h2>Productivity</h2>
       <p><a href="https://calendar.google.com">Google Calendar</a></p>
       <p><a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a></p>
+      <p><a href="https://app.standardnotes.com">Standard Notes</a></p>
       <p><a href="https://airtable.com">Airtable</a></p>
       <p><a href="https://mail.google.com">Gmail</a></p>
+      <p><a href="https://github.com/techpanda411?tab=repositories">GitHub</a></p>
     </div>
   </body>
 </html>
