some formatting changes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Personal Bookmarks</h1>
-    <div>
-      <h2>Productivity</h2>
+    <h2>Productivity</h2>
+    <div class="links">
       <p><a href="https://calendar.google.com">Google Calendar</a></p>
       <p><a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a></p>
       <p><a href="https://app.standardnotes.com">Standard Notes</a></p>
