--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <h1>Personal Bookmarks</h1>
-    <h2>Productivity</h2>
+    <header class="section"><h2>Productivity</h2></header>
     <div class="links">
-      <p><a href="https://calendar.google.com">Google Calendar</a></p>
-      <p><a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a></p>
-      <p><a href="https://app.standardnotes.com">Standard Notes</a></p>
-      <p><a href="https://airtable.com">Airtable</a></p>
-      <p><a href="https://mail.google.com">Gmail</a></p>
-      <p><a href="https://github.com/techpanda411?tab=repositories">GitHub</a></p>
+      <a href="https://calendar.google.com">Google Calendar</a>
+      <a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a>
+      <a href="https://app.standardnotes.com">Standard Notes</a>
+      <a href="https://airtable.com">Airtable</a>
+      <a href="https://mail.google.com">Gmail</a>
+      <a href="https://github.com/techpanda411?tab=repositories">GitHub</a>
     </div>
   </body>
 </html>
