--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <a href="https://calendar.google.com">Google Calendar</a>
       <a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a>
       <a href="https://app.standardnotes.com">Standard Notes</a>
-      <a href="https://airtable.com">Airtable</a>
       <a href="https://mail.google.com">Gmail</a>
+      <a href="https://drive.google.com">Google Drive</a>
+      <a href="https://airtable.com">Airtable</a>
       <a href="https://github.com/techpanda411?tab=repositories">GitHub</a>
     </div>
   </body>
