--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Bookmarks</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <h1>Personal Bookmarks</h1>
-    <header class="section"><h2>Productivity</h2></header>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Bookmarks</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h1>Personal Bookmarks</h1>
+  <div>
+    <header class="section">
+      <h2>Productivity</h2>
+    </header>
     <div class="links">
       <a href="https://calendar.google.com">Google Calendar</a>
       <a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a>
@@ -18,5 +23,15 @@
       <a href="https://airtable.com">Airtable</a>
       <a href="https://github.com/techpanda411?tab=repositories">GitHub</a>
     </div>
-  </body>
+  </div>
+  <div>
+    <header class="section">
+      <h2>Reference</h2>
+    </header>
+    <div class="links">
+      <a href="https://www.w3schools.com/howto/howto_js_collapsible.asp">HTML Collapsible</a>
+    </div>
+  </div>
+</body>
+
 </html>
