--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Personal Bookmarks</h1>
-  <div>
+  <section>
     <header class="section">
       <h2>Productivity</h2>
     </header>
@@ -23,15 +23,16 @@
       <a href="https://airtable.com">Airtable</a>
       <a href="https://github.com/techpanda411?tab=repositories">GitHub</a>
     </div>
-  </div>
-  <div>
+  </section>
+  <br>
+  <section>
     <header class="section">
       <h2>Reference</h2>
     </header>
     <div class="links">
       <a href="https://www.w3schools.com/howto/howto_js_collapsible.asp">HTML Collapsible</a>
     </div>
-  </div>
+  </section>
 </body>
 
 </html>
