--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Bookmarks</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="styles/collapsible.js"></script>
 </head>
 
 <body>
   <h1>Personal Bookmarks</h1>
   <section>
-    <header class="section">
-      <h2>Productivity</h2>
-    </header>
+    <button type="button" class="collapsible">Productivity</button>
     <div class="links">
       <a href="https://calendar.google.com">Google Calendar</a>
       <a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a>
@@ -26,9 +25,7 @@
   </section>
   <br>
   <section>
-    <header class="section">
-      <h2>Reference</h2>
-    </header>
+    <button type="button" class="collapsible">Reference</button>
     <div class="links">
       <a href="https://www.w3schools.com/howto/howto_js_collapsible.asp">HTML Collapsible</a>
     </div>
