--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookmarks</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css"
 </head>
 
 <body>
-    <h1>My Bookmarks</h1>
-    <a href="personal.html">Personal Bookmarks</a>
+    <h1>Allison's Bookmarks</h1>
+    <div class="button"><a href="personal.html">Personal Bookmarks</a></div>
 </body>
 
 </html>
