--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookmarks</title>
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css"
+    <link rel="stylesheet" href="styles/index.css"
 </head>
 
 <body>
