--- a/personal.html
+++ b/personal.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Bookmarks</title>
-  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="styles/global.css">
   <script type="text/javascript" src="scripts/collapsible.js"></script>
 </head>
 
