--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Allison's Bookmarks</h1>
-    <div class="button"><a href="personal.html">Personal Bookmarks</a></div>
+    <a href="personal.html">Personal Bookmarks</a>
 </body>
 
 </html>
