--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <h1>Allison's Bookmarks</h1>
-    <a href="personal.html">Personal Bookmarks</a>
+    <a href="personal">Personal Bookmarks</a>
+    <br>
+    <a href="work">Work Bookmarks</a>
 </body>
 
 </html>
