added more work bookmarks

--- a/work.html
+++ b/work.html
@@ -15,6 +15,12 @@
     <button type="button" class="collapsible">Projects</button>
     <div class="links">
       <a href="https://rally.gaig.com">Rally</a>
+      <a href="https://logindev.gaig.com/app/gaig-dev_informaticaclouddevelopment_1/exk25qe2auZHOWiz11d7/sso/saml?fromHome=true">Informatica Cloud - DEV</a>
+      <a href="https://logindev.gaig.com/app/gaig-dev_informaticaiicsint_1/exk426p7jsYNO0u6z1d7/sso/saml?fromHome=true">Informatica Cloud - INT</a>
+      <a href="https://logincert.gaig.com/app/gaig-cert_informaticaiicsuat_1/exk9hfsfm42bFoLnQ1d7/sso/saml?fromHome=true">Informatica Cloud - UAT</a>
+      <a href="https://app.snowflake.com/gaig/gaignonprod/worksheets/mine">Snowflake - NP</a>
+      <a href="https://uc4awi-np-gai.td.afg/awi/">UC4 - NP</a>
+      <a href="https://uc4awi.gaig.com/awi/">UC4 - PROD</a>
     </div>
   </section>
 </body>
