--- a/personal.html
+++ b/personal.html
@@ -16,7 +16,7 @@
     <div class="links">
       <a href="https://calendar.google.com">Google Calendar</a>
       <a href="https://ticktick.com/webapp/#q/today/tasks">TickTick</a>
-      <a href="https://app.standardnotes.com">Standard Notes</a>
+      <a href="https://app.notesnook.com/notes#/">Notesnook</a>
       <a href="https://mail.google.com">Gmail</a>
       <a href="https://drive.google.com/drive/my-drive">Google Drive</a>
       <a href="https://airtable.com">Airtable</a>
