updated personal bookmarks

--- a/personal.html
+++ b/personal.html
@@ -25,9 +25,9 @@
   </section>
   <br>
   <section>
-    <button type="button" class="collapsible">Reference</button>
+    <button type="button" class="collapsible">Family</button>
     <div class="links">
-      <a href="https://www.w3schools.com/howto/howto_js_collapsible.asp">HTML Collapsible</a>
+      <a href="https://imaginationlibrary.com/usa/parent-information-center/">Dolly Parton's Imagination Library</a>
     </div>
   </section>
 </body>
