updated personal bookmarks

--- a/personal.html
+++ b/personal.html
@@ -20,7 +20,7 @@
       <a href="https://mail.google.com">Gmail</a>
       <a href="https://drive.google.com/drive/my-drive">Google Drive</a>
       <a href="https://airtable.com">Airtable</a>
-      <a href="https://github.com/techpanda411?tab=repositories">GitHub</a>
+      <a href="https://github.com/login">GitHub</a>
     </div>
   </section>
   <br>
@@ -28,6 +28,7 @@
     <button type="button" class="collapsible">Financial</button>
     <div class="links">
       <a href="https://loansphereservicingdigital.bkiconnect.com/myhomeservicing/#/login">Mortgage Portal</a>
+      <a href="https://www.benefits.ml.com">Merrill Lynch</a>
     </div>
   </section>
   <br>
