updated personal bookmarks

--- a/personal.html
+++ b/personal.html
@@ -29,13 +29,14 @@
     <div class="links">
       <a href="https://loansphereservicingdigital.bkiconnect.com/myhomeservicing/#/login">Mortgage Portal</a>
       <a href="https://www.benefits.ml.com">Merrill Lynch</a>
+      <a href="https://client.schwab.com/Areas/Access/Login">Charles Schwab</a>
     </div>
   </section>
   <br>
   <section>
     <button type="button" class="collapsible">Family</button>
     <div class="links">
-      <a href="https://imaginationlibrary.com/usa/parent-information-center/">Dolly Parton's Imagination Library</a>
+      <a href="https://imaginationlibrary.com/usa/parent-information-center/">Imagination Library</a>
     </div>
   </section>
 </body>
