updated personal bookmarks

--- a/personal.html
+++ b/personal.html
@@ -28,6 +28,7 @@
     <button type="button" class="collapsible">Financial</button>
     <div class="links">
       <a href="https://loansphereservicingdigital.bkiconnect.com/myhomeservicing/#/login">Mortgage Portal</a>
+      <a href="https://digital.fidelity.com/ftgw/digital/portfolio/summary">Fidelity Investments</a>
       <a href="https://www.benefits.ml.com">Merrill Lynch</a>
       <a href="https://client.schwab.com/Areas/Access/Login">Charles Schwab</a>
     </div>
