added new section to personal bookmarks

--- a/personal.html
+++ b/personal.html
@@ -40,6 +40,15 @@
       <a href="https://imaginationlibrary.com/usa/parent-information-center/">Imagination Library</a>
     </div>
   </section>
+  <br>
+  <section>
+    <button type="button" class="collapsible">Apps</button>
+    <div class="links">
+      <a href="https://www.paprikaapp.com">Paprika Recipe Manager</a>
+      <a href="https://getupnote.com/">UpNote</a>
+      <a href="https://mementodatabase.com">Memento Database</a>
+    </div>
+  </section>
 </body>
 
 </html>
