updated personal bookmarks

--- a/personal.html
+++ b/personal.html
@@ -38,6 +38,7 @@
     <button type="button" class="collapsible">Family</button>
     <div class="links">
       <a href="https://imaginationlibrary.com/usa/parent-information-center/">Imagination Library</a>
+      <a href="https://www.familyecho.com">Family Echo</a>
     </div>
   </section>
   <br>
