added new section to work bookmarks

--- a/work.html
+++ b/work.html
@@ -19,8 +19,14 @@
       <a href="https://logindev.gaig.com/app/gaig-dev_informaticaiicsint_1/exk426p7jsYNO0u6z1d7/sso/saml?fromHome=true">Informatica Cloud - INT</a>
       <a href="https://logincert.gaig.com/app/gaig-cert_informaticaiicsuat_1/exk9hfsfm42bFoLnQ1d7/sso/saml?fromHome=true">Informatica Cloud - UAT</a>
       <a href="https://app.snowflake.com/gaig/gaignonprod/worksheets/mine">Snowflake - NP</a>
-      <a href="https://uc4awi-np-gai.td.afg/awi/">UC4 - NP</a>
-      <a href="https://uc4awi.gaig.com/awi/">UC4 - PROD</a>
+      <a href="https://uc4awi-np-gai.td.afg">UC4 - NP</a>
+      <a href="https://uc4awi.gaig.com">UC4 - PROD</a>
+    </div>
+  </section>
+  <section>
+    <button type="button" class="collapsible">General</button>
+    <div class="links">
+      <a href="https://gaig.service-now.com/tcp">Time Sheet Portal</a>
     </div>
   </section>
 </body>
