added new work bookmark

--- a/work.html
+++ b/work.html
@@ -21,6 +21,7 @@
       <a href="https://app.snowflake.com/gaig/gaignonprod/worksheets/mine">Snowflake - NP</a>
       <a href="https://uc4awi-np-gai.td.afg">UC4 - NP</a>
       <a href="https://uc4awi.gaig.com">UC4 - PROD</a>
+      <a href="https://ga-connect.gaig.com">Citrix Portal</a>
     </div>
   </section>
   <br>
