added some work bookmarks + new section

--- a/work.html
+++ b/work.html
@@ -28,7 +28,16 @@
   <section>
     <button type="button" class="collapsible">General</button>
     <div class="links">
+      <a href="https://gaig.sharepoint.com">Sharepoint: Gateway</a>
+      <a href="https://gaig.sharepoint.com/sites/DIG">Sharepoint: Data Integration Group</a>
       <a href="https://gaig.service-now.com/tcp">Time Sheet Portal</a>
+    </div>
+  </section>
+  <br>
+  <section>
+    <button type="button" class="collapsible">Management</button>
+    <div class="links">
+      <a href="https://sara.td.afg/access/manager-dashboard">System Access Review Portal</a>
     </div>
   </section>
 </body>
