fixed link in work bookmarks

--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
   <section>
     <button type="button" class="collapsible">Management</button>
     <div class="links">
-      <a href="sso.afgvms.com">Simplify Dashboard</a>
+      <a href="https://sso.afgvms.com">Simplify Dashboard</a>
       <a href="https://sara.td.afg/access/manager-dashboard">System Access Review Portal</a>
     </div>
   </section>
