added work bookmark

--- a/work.html
+++ b/work.html
@@ -30,6 +30,7 @@
     <div class="links">
       <a href="https://gaig.sharepoint.com">Sharepoint: Gateway</a>
       <a href="https://gaig.sharepoint.com/sites/DIG">Sharepoint: Data Integration Group</a>
+      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Sharepoint: Data Integration Group (private)</a>
       <a href="https://gaig.service-now.com/tcp">Time Sheet Portal</a>
     </div>
   </section>
