updated work bookmarks

--- a/work.html
+++ b/work.html
@@ -28,9 +28,9 @@
   <section>
     <button type="button" class="collapsible">General</button>
     <div class="links">
-      <a href="https://gaig.sharepoint.com">Sharepoint: Gateway</a>
-      <a href="https://gaig.sharepoint.com/sites/DIG">Sharepoint: Data Integration Group</a>
-      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Sharepoint: Data Integration Group (private)</a>
+      <a href="https://gaig.sharepoint.com">Gateway Sharepoint</a>
+      <a href="https://gaig.sharepoint.com/sites/DIG">Data Integration Group Sharepoint</a>
+      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Private Data Integration Group Sharepoint</a>
       <a href="https://gaig.service-now.com/tcp">Time Sheet Portal</a>
     </div>
   </section>
@@ -38,6 +38,7 @@
   <section>
     <button type="button" class="collapsible">Management</button>
     <div class="links">
+      <a href="https://gaig.service-now.com/now/nav/ui/classic/params/target/time_sheet_list.do%3Fsysparm_query%3Duser.manager%253Djavascript%3Anew%2520TimecardAjax().getUserandDelegators()%255Esys_created_on%253Ejavascript%3Ags.beginningOfLast30Days()%255Esys_created_on%253Cjavascript%3Ags.beginningOfLastWeek()%255EORDERBYuser.manager%255EORDERBYDESCweek_starts_on%255EORDERBYuser%26sysparm_first_row%3D1%26sysparm_view%3D">ServiceNow Timesheet Approvals</a>
       <a href="https://sso.afgvms.com">Simplify Dashboard</a>
       <a href="https://sara.td.afg/access/manager-dashboard">System Access Review Portal</a>
     </div>
