updated work bookmarks

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
       <a href="https://gaig.sharepoint.com">Gateway Sharepoint</a>
       <a href="https://gaig.sharepoint.com/sites/DIG">Data Integration Group Sharepoint</a>
       <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Private Data Integration Group Sharepoint</a>
-      <a href="https://gaig.service-now.com/tcp">Time Sheet Portal</a>
+      <a href="https://gaig.service-now.com/tcp">Timesheet Submission Portal</a>
     </div>
   </section>
   <br>
@@ -41,6 +41,13 @@
       <a href="https://gaig.service-now.com/now/nav/ui/classic/params/target/time_sheet_list.do%3Fsysparm_query%3Duser.manager%253Djavascript%3Anew%2520TimecardAjax().getUserandDelegators()%255Esys_created_on%253Ejavascript%3Ags.beginningOfLast30Days()%255Esys_created_on%253Cjavascript%3Ags.beginningOfLastWeek()%255EORDERBYuser.manager%255EORDERBYDESCweek_starts_on%255EORDERBYuser%26sysparm_first_row%3D1%26sysparm_view%3D">ServiceNow Timesheet Approvals</a>
       <a href="https://sso.afgvms.com">Simplify Dashboard</a>
       <a href="https://sara.td.afg/access/manager-dashboard">System Access Review Portal</a>
+    </div>
+  </section>
+  <br>
+  <section>
+    <button type="button" class="collapsible">Reference</button>
+    <div class="links">
+      <a href="https://gaig.sharepoint.com/sites/PCITStrategy/SitePages/guidingprinciples.aspx">Guiding Principles</a>
     </div>
   </section>
 </body>
