--- a/work.html
+++ b/work.html
@@ -18,7 +18,8 @@
       <a href="https://logindev.gaig.com/app/gaig-dev_informaticaclouddevelopment_1/exk25qe2auZHOWiz11d7/sso/saml?fromHome=true">Informatica Cloud - DEV</a>
       <a href="https://logindev.gaig.com/app/gaig-dev_informaticaiicsint_1/exk426p7jsYNO0u6z1d7/sso/saml?fromHome=true">Informatica Cloud - INT</a>
       <a href="https://logincert.gaig.com/app/gaig-cert_informaticaiicsuat_1/exk9hfsfm42bFoLnQ1d7/sso/saml?fromHome=true">Informatica Cloud - UAT</a>
-      <a href="https://app.snowflake.com/gaig/gaignonprod/worksheets/mine">Snowflake - NP</a>
+      <a href="https://app.snowflake.com/gaig/gaignonprod/#/homepage">Snowflake - NP</a>
+      <a href="https://app.snowflake.com/gaig/mh85419/#/homepage">Snowflake - PROD</a>
       <a href="https://uc4awi-np-gai.td.afg">UC4 - NP</a>
       <a href="https://uc4awi.gaig.com">UC4 - PROD</a>
       <a href="https://ga-connect.gaig.com">Citrix Portal</a>
@@ -30,7 +31,7 @@
     <div class="links">
       <a href="https://gaig.sharepoint.com">Gateway Sharepoint</a>
       <a href="https://gaig.sharepoint.com/sites/DIG">Data Integration Group Sharepoint</a>
-      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Private Data Integration Group Sharepoint</a>
+      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Data Integration Group Sharepoint (private)</a>
       <a href="https://gaig.service-now.com/tcp">Timesheet Submission Portal</a>
     </div>
   </section>
@@ -53,3 +54,4 @@
 </body>
 
 </html>
+
