--- a/work.html
+++ b/work.html
@@ -30,9 +30,10 @@
     <button type="button" class="collapsible">General</button>
     <div class="links">
       <a href="https://gaig.sharepoint.com">Gateway Sharepoint</a>
-      <a href="https://gaig.sharepoint.com/sites/DIG">Data Integration Group Sharepoint</a>
-      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">Data Integration Group Sharepoint (private)</a>
       <a href="https://gaig.service-now.com/tcp">Timesheet Submission Portal</a>
+      <a href="https://github.gaig.com/login">GitHub Enterprise</a>
+      <a href="https://gaig.sharepoint.com/sites/DIG">DIG Site - Public</a>
+      <a href="https://gaig.sharepoint.com/sites/DataIntegrationGroup">DIG Site - Private</a>
     </div>
   </section>
   <br>
@@ -54,4 +55,5 @@
 </body>
 
 </html>
+
 
