adjustments to index styling

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookmarks</title>
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/index.css"
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
     <h1>Allison's Bookmarks</h1>
-    <a href="personal">Personal Bookmarks</a>
-    <br>
-    <a href="work">Work Bookmarks</a>
+    <button type="button" onclick="location.href='personal'">Personal Bookmarks</a>
+    <button type="button" onclick="location.href='work'">Work Bookmarks</a>
 </body>
 
 </html>
